--- a/editor-viewer/package.json
+++ b/editor-viewer/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "jquery": "^1.9.1",
+    "oidc-client": "^1.11.5",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
     "vue-template-compiler": "^2.6.14"
